--- a/.ci_support/win_64_python3.8.____cpython.yaml
+++ b/.ci_support/win_64_python3.8.____cpython.yaml
@@ -2,15 +2,15 @@ channel_sources:
 - conda-forge/label/rust_dev,conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.6.* *_73_pypy
+- 3.8.* *_cpython
 rust_compiler:
 - rust
 rust_compiler_version:
 - 1.29.0
+target_platform:
+- win-64
