--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ build:
 requirements:
   build:
     - {{ compiler('rust') }}
+    - {{ compiler('c') }}
   host:
     - python
     - pip
@@ -27,7 +28,7 @@ requirements:
     - setuptools
   run:
     - python
-    - libgcc-ng ==9.2.0                      # [linux]
+    # - libgcc-ng ==9.2.0                      # [linux]
 
 test:
   imports:
