--- a/.ci_support/linux_64_python3.6.____cpython.yaml
+++ b/.ci_support/linux_64_python3.6.____cpython.yaml
@@ -1,3 +1,7 @@
+c_compiler:
+- gcc
+c_compiler_version:
+- '7'
 channel_sources:
 - conda-forge/label/rust_dev,conda-forge,defaults
 channel_targets:
@@ -13,6 +17,6 @@ python:
 rust_compiler:
 - rust
 rust_compiler_version:
-- 1.29.0
+- 1.40.0
 target_platform:
 - linux-64
