--- a/.ci_support/osx_64_python3.7.____cpython.yaml
+++ b/.ci_support/osx_64_python3.7.____cpython.yaml
@@ -1,5 +1,9 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
+c_compiler:
+- clang
+c_compiler_version:
+- '10'
 channel_sources:
 - conda-forge/label/rust_dev,conda-forge,defaults
 channel_targets:
@@ -15,6 +19,6 @@ python:
 rust_compiler:
 - rust
 rust_compiler_version:
-- 1.29.0
+- 1.40.0
 target_platform:
 - osx-64
