--- a/.ci_support/win_64_python3.7.____cpythonrust_compilerrust-gnu.yaml
+++ b/.ci_support/win_64_python3.7.____cpythonrust_compilerrust-gnu.yaml
@@ -1,3 +1,5 @@
+c_compiler:
+- vs2017
 channel_sources:
 - conda-forge/label/rust_dev,conda-forge,defaults
 channel_targets:
@@ -9,8 +11,8 @@ pin_run_as_build:
 python:
 - 3.7.* *_cpython
 rust_compiler:
-- rust
+- rust-gnu
 rust_compiler_version:
-- 1.29.0
+- 1.40.0
 target_platform:
 - win-64
