--- a/.ci_support/win_64_python3.7.____cpythonrust_compilerrust.yaml
+++ b/.ci_support/win_64_python3.7.____cpythonrust_compilerrust.yaml
@@ -1,3 +1,5 @@
+c_compiler:
+- vs2017
 channel_sources:
 - conda-forge/label/rust_dev,conda-forge,defaults
 channel_targets:
@@ -7,10 +9,10 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.6.* *_cpython
+- 3.7.* *_cpython
 rust_compiler:
 - rust
 rust_compiler_version:
-- 1.29.0
+- 1.40.0
 target_platform:
 - win-64
