--- a/.ci_support/win_64_python3.8.____cpythonrust_compilerrust-gnu.yaml
+++ b/.ci_support/win_64_python3.8.____cpythonrust_compilerrust-gnu.yaml
@@ -1,13 +1,9 @@
 c_compiler:
-- gcc
-c_compiler_version:
-- '7'
+- vs2017
 channel_sources:
 - conda-forge/label/rust_dev,conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -15,8 +11,8 @@ pin_run_as_build:
 python:
 - 3.8.* *_cpython
 rust_compiler:
-- rust
+- rust-gnu
 rust_compiler_version:
 - 1.40.0
 target_platform:
-- linux-64
+- win-64
