--- a/.ci_support/win_64_python3.8.____cpythonrust_compilerrust.yaml
+++ b/.ci_support/win_64_python3.8.____cpythonrust_compilerrust.yaml
@@ -1,13 +1,9 @@
 c_compiler:
-- gcc
-c_compiler_version:
-- '7'
+- vs2017
 channel_sources:
 - conda-forge/label/rust_dev,conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -19,4 +15,4 @@ rust_compiler:
 rust_compiler_version:
 - 1.40.0
 target_platform:
-- linux-64
+- win-64
