--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ build:
 requirements:
   build:
     - {{ compiler('rust') }}
-    # - {{ compiler('c') }}
+    - {{ compiler('c') }}
   host:
     - python
     - pip
@@ -28,7 +28,6 @@ requirements:
     - setuptools
   run:
     - python
-    - libgcc-ng                     # [linux]
 
 test:
   imports:
