--- a/.ci_support/linux_64_python3.6.____cpython.yaml
+++ b/.ci_support/linux_64_python3.6.____cpython.yaml
@@ -1,5 +1,7 @@
+cdt_name:
+- cos6
 channel_sources:
-- conda-forge/label/rust_dev,conda-forge,defaults
+- conda-forge,defaults
 channel_targets:
 - conda-forge main
 docker_image:
