add myself as maintainer

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,7 +56,8 @@ about:
 
 extra:
   recipe-maintainers:
+    - anthchirp
+    - ndmaxar
     - oblute
     - rluria14
-    - ndmaxar
     - setu4993
