--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,8 @@ build:
   missing_dso_whitelist:
     - /usr/lib/libresolv.9.dylib  # [osx]
     - /usr/lib64/libgcc_s.so.1  # [linux]
+  script:
+    - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
@@ -22,7 +24,7 @@ requirements:
   host:
     - python
     - pip
-    - setuptools-rust
+    - setuptools-rust >=0.11.5
     - setuptools
   run:
     - python
