update to v0.9.3 and add Windows builds (#8)
* updated v0.9.2

* MNT: Re-rendered with conda-build 3.20.4, conda-smithy 3.8.2, and conda-forge-pinning 2020.10.15.16.54.09

* remove rust v1.29 pin

* remove 1.29 pin configuration and rust-dev reference

* v0.9.3

* recipe cleanup

* esaxx-rs needs c++ compilers

* add myself as maintainer

* MNT: Re-rendered with conda-build 3.20.5, conda-smithy 3.8.5, and conda-forge-pinning 2020.11.07.01.17.20

* Unset build target. Enable Windows build.

* MNT: Re-rendered with conda-build 3.20.5, conda-smithy 3.8.5, and conda-forge-pinning 2020.11.07.01.17.20

* run with fixed setuptools-rust version

and retire the custom build scripts

* MNT: Re-rendered with conda-build 3.20.5, conda-smithy 3.8.5, and conda-forge-pinning 2020.11.18.18.18.16

Co-authored-by: regro-cf-autotick-bot <36490558+regro-cf-autotick-bot@users.noreply.github.com>
Co-authored-by: conda-forge-linter <github-actions@email.com>

--- a/.ci_support/linux_64_python3.7.____cpython.yaml
+++ b/.ci_support/linux_64_python3.7.____cpython.yaml
@@ -1,9 +1,15 @@
+cdt_name:
+- cos6
 channel_sources:
-- conda-forge/label/rust_dev,conda-forge,defaults
+- conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- gxx
+cxx_compiler_version:
+- '7'
 docker_image:
-- condaforge/linux-anvil-comp7
+- quay.io/condaforge/linux-anvil-comp7
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -12,5 +18,5 @@ python:
 - 3.7.* *_cpython
 rust_compiler:
 - rust
-rust_compiler_version:
-- 1.29.0
+target_platform:
+- linux-64
