--- a/.ci_support/osx_64_python3.6.____cpython.yaml
+++ b/.ci_support/osx_64_python3.6.____cpython.yaml
@@ -1,13 +1,15 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 channel_sources:
-- conda-forge/label/rust_dev,conda-forge,defaults
+- conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- clangxx
+cxx_compiler_version:
+- '11'
 macos_machine:
 - x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -16,5 +18,5 @@ python:
 - 3.6.* *_cpython
 rust_compiler:
 - rust
-rust_compiler_version:
-- 1.29.0
+target_platform:
+- osx-64
