--- a/.ci_support/win_64_python3.6.____cpython.yaml
+++ b/.ci_support/win_64_python3.6.____cpython.yaml
@@ -1,16 +1,16 @@
 channel_sources:
-- conda-forge/label/rust_dev,conda-forge,defaults
+- conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
+cxx_compiler:
+- vs2017
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.8.* *_cpython
+- 3.6.* *_cpython
 rust_compiler:
 - rust
-rust_compiler_version:
-- 1.29.0
+target_platform:
+- win-64
