Delete unnecessary _sysconfigdata files during build
PyO3 does not use the _PYTHON_SYSCONFIGDATA_NAME environment variable when there are multiple options, but breaks instead.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,6 +16,7 @@ build:
     - /usr/lib64/libgcc_s.so.1  # [linux]
   script:
     - export PYO3_CROSS_LIB_DIR={{ PREFIX }}/lib  # [arm64]
+    - find {{ PREFIX }}/lib/python3.* -name "_sysconfigdata_*.py" -type f -not -name "_sysconfigdata_arm64_*.py" -delete  # [arm64]
     - {{ PYTHON }} -m pip install . -vv
 
 requirements:
