--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ build:
     - export PYO3_CROSS_LIB_DIR={{ PREFIX }}/lib  # [arm64]
     - find {{ PREFIX }}/lib/python3.* -name "_sysconfigdata_*.py" -type f -not -name "_sysconfigdata_arm64_*.py" -delete  # [arm64]
     - {{ PYTHON }} -m pip install . -vv
+  skip: True  # [arm64 and py==39]
 
 requirements:
   build:
