Build tokenizers for Apple Silicon (#16)
* Add support for osx_arm64
* Fix PyO3 cross compilation
* Delete unnecessary _sysconfigdata files during build
  PyO3 does not use the _PYTHON_SYSCONFIGDATA_NAME environment
  variable when there are multiple options, but breaks instead.
* MNT: Re-rendered with conda-build 3.21.4, conda-smithy 3.9.0, and conda-forge-pinning 2021.03.09.14.14.27

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,10 +15,14 @@ build:
     - /usr/lib/libresolv.9.dylib  # [osx]
     - /usr/lib64/libgcc_s.so.1  # [linux]
   script:
+    - export PYO3_CROSS_LIB_DIR={{ PREFIX }}/lib  # [arm64]
+    - find {{ PREFIX }}/lib/python3.* -name "_sysconfigdata_*.py" -type f -not -name "_sysconfigdata_arm64_*.py" -delete  # [arm64]
     - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler('cxx') }}
     - {{ compiler('rust') }}
   host:
