run upstream test suite
switch to github sources to do so

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,15 @@
-{% set name = "tokenizers" %}
 {% set version = "0.12.1" %}
 
 package:
-  name: {{ name|lower }}
+  name: tokenizers
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 070746f86efa6c873db341e55cf17bb5e7bdd5450330ca8eca542f5c3dab2c66
+  url: https://github.com/huggingface/tokenizers/archive/refs/tags/python-v{{ version }}.tar.gz
+  sha256: db60f1966607ef9992de8d72c47b3c7980af997cd4d2d873b597b869f9c117c7
 
 build:
-  number: 1
+  number: 2
   missing_dso_whitelist:
     - /usr/lib/libresolv.9.dylib  # [osx]
     - /usr/lib64/libgcc_s.so.1  # [linux]
@@ -24,6 +23,7 @@ build:
     - export OPENSSL_DIR=$PREFIX
     {% endif %}
     - find {{ PREFIX }}/lib/python3.* -name "_sysconfigdata_*.py" -type f -not -name "_sysconfigdata_arm64_*.py" -delete  # [arm64]
+    - cd bindings/python
     - {{ PYTHON }} -m pip install . -vv
 
 requirements:
@@ -52,10 +52,14 @@ test:
     - tokenizers.processors
     - tokenizers.trainers
     - tokenizers.implementations
-  commands:
-    - pip check
   requires:
     - pip
+    - pytest
+  source_files:
+    - bindings/python/tests
+  commands:
+    - pip check
+    - pytest bindings/python/tests
 
 about:
   home: https://pypi.org/project/tokenizers/
