flesh out test requirements
see https://github.com/huggingface/tokenizers/blob/python-v0.11.6/bindings/python/setup.py#L5

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -55,6 +55,9 @@ test:
   requires:
     - pip
     - pytest
+    - datasets
+    - numpy *
+    - requests
   source_files:
     - bindings/python/tests
   commands:
