--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - pip
     - setuptools-rust >=0.11.5
     - setuptools
-    - openssl
+    - openssl    # [linux]
   run:
     - python
 
