--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,7 +66,7 @@ test:
   source_files:
     - bindings/python/tests
   commands:
-    - pip check
+    # - pip check
     - cd bindings/python
     # adapted from https://github.com/huggingface/tokenizers/blob/master/bindings/python/Makefile
     - mkdir data
