--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,7 +4,7 @@ conda_forge_output_validation: true
 provider:
   linux_aarch64: default
   linux_ppc64le: default
-test_on_native_only: true
+test: native_and_emulated
 github:
   branch_name: main
   tooling_branch_name: main
