--- a/.ci_support/osx_64_openssl1.1.1python3.10.____cpython.yaml
+++ b/.ci_support/osx_64_openssl1.1.1python3.10.____cpython.yaml
@@ -7,15 +7,17 @@ channel_targets:
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '13'
+- '14'
 macos_machine:
 - x86_64-apple-darwin13.4.0
+openssl:
+- 1.1.1
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.10.* *_cpython
 rust_compiler:
 - rust
 target_platform:
