--- a/.ci_support/osx_arm64_openssl1.1.1python3.8.____cpython.yaml
+++ b/.ci_support/osx_arm64_openssl1.1.1python3.8.____cpython.yaml
@@ -1,5 +1,5 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
+- '11.0'
 channel_sources:
 - conda-forge
 channel_targets:
@@ -7,16 +7,18 @@ channel_targets:
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '13'
+- '14'
 macos_machine:
-- x86_64-apple-darwin13.4.0
+- arm64-apple-darwin20.0.0
+openssl:
+- 1.1.1
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.10.* *_cpython
+- 3.8.* *_cpython
 rust_compiler:
 - rust
 target_platform:
-- osx-64
+- osx-arm64
