--- a/.ci_support/win_64_openssl1.1.1python3.9.____cpython.yaml
+++ b/.ci_support/win_64_openssl1.1.1python3.9.____cpython.yaml
@@ -3,7 +3,9 @@ channel_sources:
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- vs2017
+- vs2019
+openssl:
+- 1.1.1
 pin_run_as_build:
   python:
     min_pin: x.x
