--- a/.ci_support/osx_64_openssl1.1.1python3.8.____cpython.yaml
+++ b/.ci_support/osx_64_openssl1.1.1python3.8.____cpython.yaml
@@ -10,12 +10,14 @@ cxx_compiler_version:
 - '14'
 macos_machine:
 - x86_64-apple-darwin13.4.0
+openssl:
+- 1.1.1
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.7.* *_cpython
+- 3.8.* *_cpython
 rust_compiler:
 - rust
 target_platform:
