--- a/.ci_support/osx_arm64_openssl1.1.1python3.8.____cpython.yaml
+++ b/.ci_support/osx_arm64_openssl1.1.1python3.8.____cpython.yaml
@@ -10,6 +10,8 @@ cxx_compiler_version:
 - '14'
 macos_machine:
 - arm64-apple-darwin20.0.0
+openssl:
+- 1.1.1
 pin_run_as_build:
   python:
     min_pin: x.x
