--- a/.ci_support/win_64_openssl1.1.1python3.10.____cpython.yaml
+++ b/.ci_support/win_64_openssl1.1.1python3.10.____cpython.yaml
@@ -4,12 +4,14 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - vs2019
+openssl:
+- 1.1.1
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.7.* *_cpython
+- 3.10.* *_cpython
 rust_compiler:
 - rust
 target_platform:
