--- a/.ci_support/win_64_openssl1.1.1python3.9.____cpython.yaml
+++ b/.ci_support/win_64_openssl1.1.1python3.9.____cpython.yaml
@@ -1,21 +1,11 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
-cdt_arch:
-- aarch64
-cdt_name:
-- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
-cxx_compiler_version:
-- '10'
-docker_image:
-- quay.io/condaforge/linux-anvil-aarch64
+- vs2019
 openssl:
-- '3'
+- 1.1.1
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -25,4 +15,4 @@ python:
 rust_compiler:
 - rust
 target_platform:
-- linux-aarch64
+- win-64
