--- a/.ci_support/osx_64_openssl1.1.1python3.11.____cpython.yaml
+++ b/.ci_support/osx_64_openssl1.1.1python3.11.____cpython.yaml
@@ -1,15 +1,15 @@
-cdt_name:
-- cos6
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '10'
-docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- '14'
+macos_machine:
+- x86_64-apple-darwin13.4.0
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -17,8 +17,8 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.7.* *_cpython
+- 3.11.* *_cpython
 rust_compiler:
 - rust
 target_platform:
-- linux-64
+- osx-64
