skip test suite for openssl 3 (missing dependency)

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,7 +56,8 @@ test:
   requires:
     - pip
     - pytest
-    - datasets
+    # transitive dependency arrow-cpp stuck on openssl 1.1.1 for the moment
+    - datasets  # [openssl == "1.1.1"]
     - numpy *
     - requests
     - curl *
@@ -72,7 +73,8 @@ test:
     {% set tests_to_skip = "_not_a_real_test" %}
     # windows and expectation of forking -> not gonna happen
     {% set tests_to_skip = tests_to_skip + " or with_parallelism" %}  # [win]
-    - pytest -v tests -k "not ({{ tests_to_skip }})"
+    # cannot run tests for openssl 3 for the moment (missing dependency, see above)
+    - pytest -v tests -k "not ({{ tests_to_skip }})"  # [openssl == "1.1.1"]
 
 about:
   home: https://pypi.org/project/tokenizers/
