--- a/.ci_support/osx_64_openssl1.1.1python3.8.____73_pypy.yaml
+++ b/.ci_support/osx_64_openssl1.1.1python3.8.____73_pypy.yaml
@@ -1,16 +1,24 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- vs2019
+- clangxx
+cxx_compiler_version:
+- '14'
+macos_machine:
+- x86_64-apple-darwin13.4.0
+openssl:
+- 1.1.1
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.8.* *_cpython
+- 3.8.* *_73_pypy
 rust_compiler:
 - rust
 target_platform:
-- win-64
+- osx-64
