--- a/.ci_support/osx_arm64_openssl1.1.1python3.9.____cpython.yaml
+++ b/.ci_support/osx_arm64_openssl1.1.1python3.9.____cpython.yaml
@@ -1,9 +1,17 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- vs2019
+- clangxx
+cxx_compiler_version:
+- '14'
+macos_machine:
+- arm64-apple-darwin20.0.0
+openssl:
+- 1.1.1
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -13,4 +21,4 @@ python:
 rust_compiler:
 - rust
 target_platform:
-- win-64
+- osx-arm64
