--- a/.ci_support/osx_arm64_openssl3python3.8.____cpython.yaml
+++ b/.ci_support/osx_arm64_openssl3python3.8.____cpython.yaml
@@ -10,12 +10,14 @@ cxx_compiler_version:
 - '14'
 macos_machine:
 - arm64-apple-darwin20.0.0
+openssl:
+- '3'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.8.* *_cpython
 rust_compiler:
 - rust
 target_platform:
