--- a/.ci_support/win_64_openssl3python3.9.____cpython.yaml
+++ b/.ci_support/win_64_openssl3python3.9.____cpython.yaml
@@ -4,12 +4,14 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - vs2019
+openssl:
+- '3'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.10.* *_cpython
+- 3.9.* *_cpython
 rust_compiler:
 - rust
 target_platform:
