--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,9 @@
 {% set tests_to_skip = "_not_a_real_test" %}
+{% set name = "tokenizers" %}
 {% set version = "0.14.0" %}
 
 package:
-  name: tokenizers
+  name: "{{ name|lower }}"
   version: {{ version }}
 
 source:
