--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
+  url: https://github.com/huggingface/tokenizers/archive/refs/tags/v{{ version }}.tar.gz
   sha256: a06efa1f19dcc0e9bd0f4ffbf963cb0217af92a9694f68fe7eee5e1c6ddc4bde
   patches:
     - patches/0001-don-t-fork-on-windows.patch  # [win]
