Revert "fix: Remvoe `pip check`"
This reverts commit 7eebe365f3c4861dff62b43ad34640e23eee9723.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -69,6 +69,7 @@ test:
   source_files:
     - bindings/python/tests
   commands:
+    - pip check
     # upstream requires running the tests from this directory
     - cd bindings/python
     # adapted from https://github.com/huggingface/tokenizers/blob/master/bindings/python/Makefile
