--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,35 +14,35 @@ source:
 
 build:
   number: 0
-  # missing_dso_whitelist:
-  #   - /usr/lib/libresolv.9.dylib  # [osx]
-  #   - /usr/lib64/libgcc_s.so.1  # [linux]
+  missing_dso_whitelist:
+    - /usr/lib/libresolv.9.dylib  # [osx]
+    - /usr/lib64/libgcc_s.so.1  # [linux]
   script:
-  #   {% if build_platform != target_platform %}
-  #   - export PYO3_CROSS_INCLUDE_DIR=$PREFIX/include
-  #   - export PYO3_CROSS_LIB_DIR=$SP_DIR/../
-  #   - export PYO3_CROSS_PYTHON_VERSION=$PY_VER
-  #   # see below for what OPENSSL_DIR should be pointing to:
-  #   # https://github.com/sfackler/rust-openssl/blob/openssl-sys-v0.9.72/openssl/src/lib.rs#L55-L56
-  #   - export OPENSSL_DIR=$PREFIX
-  #   {% endif %}
+    {% if build_platform != target_platform %}
+    - export PYO3_CROSS_INCLUDE_DIR=$PREFIX/include
+    - export PYO3_CROSS_LIB_DIR=$SP_DIR/../
+    - export PYO3_CROSS_PYTHON_VERSION=$PY_VER
+    # see below for what OPENSSL_DIR should be pointing to:
+    # https://github.com/sfackler/rust-openssl/blob/openssl-sys-v0.9.72/openssl/src/lib.rs#L55-L56
+    - export OPENSSL_DIR=$PREFIX
+    {% endif %}
     - cd bindings/python
     - {{ PYTHON }} -m pip install . -vv
 
 requirements:
-  # build:
-    # - python                                 # [build_platform != target_platform]
-    # - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    # - openssl                                # [build_platform != target_platform]
-    # - {{ compiler('cxx') }}
-    # - {{ compiler('rust') }}
+  build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - openssl                                # [build_platform != target_platform]
+    - {{ compiler('cxx') }}
+    - {{ compiler('rust') }}
+    - maturin
   host:
     - python
     - pip
     - setuptools-rust >=0.11.5
     - setuptools
     - openssl    # [linux]
-    - maturin
   run:
     - python
 
