fix: Add maturin back to host

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,6 +42,7 @@ requirements:
     - pip
     - setuptools-rust >=0.11.5
     - setuptools
+    - maturin
     - openssl    # [linux]
   run:
     - python
