--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     - patches/0001-don-t-fork-on-windows.patch  # [win]
 
 build:
-  number: 0
+  number: 1
   missing_dso_whitelist:
     - /usr/lib/libresolv.9.dylib  # [osx]
     - /usr/lib64/libgcc_s.so.1  # [linux]
@@ -33,18 +33,17 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - openssl                                # [build_platform != target_platform]
+    - maturin >=1.0,<2.0                     # [build_platform != target_platform]
     - {{ compiler('cxx') }}
     - {{ compiler('rust') }}
-    - maturin
   host:
     - python
     - pip
-    - setuptools-rust >=0.11.5
-    - setuptools
-    - maturin
+    - maturin >=1.0,<2.0
     - openssl    # [linux]
   run:
     - python
+    - huggingface_hub >=0.16.4,<0.18
 
 test:
   imports:
@@ -60,7 +59,6 @@ test:
     - pip
     - pytest
     - datasets
-    - huggingface_hub < 0.17
     - numpy *
     - requests
     - curl *
@@ -96,3 +94,4 @@ extra:
     - oblute
     - setu4993
     - h-vetinari
+    - xhochy
