--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,14 +17,14 @@ build:
     - /usr/lib/libresolv.9.dylib  # [osx]
     - /usr/lib64/libgcc_s.so.1  # [linux]
   script:
-    # {% if build_platform != target_platform %}
-    # - export PYO3_CROSS_INCLUDE_DIR=$PREFIX/include
-    # - export PYO3_CROSS_LIB_DIR=$SP_DIR/../
-    # - export PYO3_CROSS_PYTHON_VERSION=$PY_VER
-    # # see below for what OPENSSL_DIR should be pointing to:
-    # # https://github.com/sfackler/rust-openssl/blob/openssl-sys-v0.9.72/openssl/src/lib.rs#L55-L56
-    # - export OPENSSL_DIR=$PREFIX
-    # {% endif %}
+    {% if build_platform != target_platform %}
+    - export PYO3_CROSS_INCLUDE_DIR=$PREFIX/include
+    - export PYO3_CROSS_LIB_DIR=$SP_DIR/../
+    - export PYO3_CROSS_PYTHON_VERSION=$PY_VER
+    # see below for what OPENSSL_DIR should be pointing to:
+    # https://github.com/sfackler/rust-openssl/blob/openssl-sys-v0.9.72/openssl/src/lib.rs#L55-L56
+    - export OPENSSL_DIR=$PREFIX
+    {% endif %}
     - cd bindings/python
     - {{ PYTHON }} -m pip install . -vv
 
